@@ -1,3 +1,14 @@
+2009-12-08 Markus Malkusch <markus@malkusch.de>
+
+    * classes/Autoloader.php (Autoloader::searchPath()):
+    Each searching for a class definition resets the max_execution_time.
+    
+    * classes/parser/AutoloaderFileParser.php (AutoloaderFileParser::isClassInFile()):
+    The path for AutoloaderException_Parser_IO was wrong.
+    
+    * classes/parser/AutoloaderFileParser_Tokenizer.php (AutoloaderFileParser_Tokenizer::isClassInSource()):
+    If the tokenizer fails it throws a AutoloaderException_Parser.
+    
 2009-11-29 Markus Malkusch <markus@malkusch.de>
 
     * classes/exception/AutoloaderException_SearchFailed.php (AutoloaderException_SearchFailed::getClass()):
